--- a/src/App/components/Header/index.css
+++ b/src/App/components/Header/index.css
@@ -13,7 +13,8 @@ h1#title {
   
 @media (max-width: 768px) {
   #home{
-    padding-top: 1vh;
-    padding-bottom: .1vh;
+    margin: 0;
+    padding-top: 0vh;
+    padding-bottom: 0vh;
   }
 }
